# kivy-game-galaxy

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  galaxy.kv  main.py  menu.kv  menu.py  pyproject.toml  requirements.txt  transforms.py  user_actions.py
docs/: architecture.md  roadmap.md  technical-spec.md  testing.md
docs/steps/: 01-installation.md  02-project-structure.md  03-kivy-basics.md  04-game-loop.md  05-input-and-controls.md  06-rendering-and-animation.md  07-collision-and-scoring.md  08-audio-and-assets.md  09-packaging-and-release.md  10-professional-next-steps.md  11-quality-tooling.md
src/galaxy_runner/: __init__.py  app.py  config.py  core.py  game.py
tests/: test_core.py
