[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-runner"
version = "0.1.0"
description = "Production-minded Kivy arcade starter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Galaxy Runner Team" }]
dependencies = [
  "Kivy==2.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "ruff==0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]